--- a/streamlit/Dockerfile
+++ b/streamlit/Dockerfile
@@ -4,7 +4,7 @@ FROM python:3.12
 WORKDIR /app
 
 # Copy all files from the current directory to the /app directory in the container
-COPY app.py requirements.txt /app/
+COPY ..
 
 
 RUN pip install --upgrade pip && pip install -r requirements.txt
